--- a/manifest.json
+++ b/manifest.json
@@ -4,79 +4,79 @@
   "description": "Gioco in stile Pixel Art, simpaticamente ispirato a un meme del WEB.",
   "icons": [
     {
-      "src": "./assets/icons/32.png",
+      "src": "assets/icons/32.png",
       "sizes": "32x32",
       "type": "image/png",
       "purpose": "maskable"
     },
     {
-      "src": "./assets/icons/64.png",
+      "src": "assets/icons/64.png",
       "sizes": "64x64",
       "type": "image/png",
       "purpose": "maskable"
     },
     {
-      "src": "./assets/icons/128.png",
+      "src": "assets/icons/128.png",
       "sizes": "128x128",
       "type": "image/png",
       "purpose": "maskable"
     },
     {
-      "src": "./assets/icons/256.png",
+      "src": "assets/icons/256.png",
       "sizes": "256x256",
       "type": "image/png",
       "purpose": "maskable"
     },
     {
-      "src": "./assets/icons/512.png",
+      "src": "assets/icons/512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable"
     },
     {
-      "src": "./assets/icons/1024.png",
+      "src": "assets/icons/1024.png",
       "sizes": "1024x1024",
       "type": "image/png",
       "purpose": "maskable"
     },
     {
-      "src": "./assets/icons/t_32.png",
+      "src": "assets/icons/t_32.png",
       "sizes": "32x32",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "./assets/icons/t_64.png",
+      "src": "assets/icons/t_64.png",
       "sizes": "64x64",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "./assets/icons/t_128.png",
+      "src": "assets/icons/t_128.png",
       "sizes": "128x128",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "./assets/icons/t_256.png",
+      "src": "assets/icons/t_256.png",
       "sizes": "256x256",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "./assets/icons/t_512.png",
+      "src": "assets/icons/t_512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "./assets/icons/t_1024.png",
+      "src": "assets/icons/t_1024.png",
       "sizes": "1024x1024",
       "type": "image/png",
       "purpose": "any"
     }
   ],
-  "start_url": "./index.html",
+  "start_url": "index.html",
   "display": "fullscreen",
   "orientation": "portrait",
   "theme_color": "#282C3C",
