--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "La Scoteca",
-  "shorname": "La Scoteca",
+  "short_name": "La Scoteca",
   "description": "Gioco in stile Pixel Art, simpaticamente ispirato a un meme del WEB.",
   "icons": [
     {
